Revert "Use corsfilter instead of bean (#1879)"
This reverts commit b8e306b5a6f2b4bba0684202f313bedb86aad832.