@@ -122,7 +122,11 @@ public class SecuritySpringConfig extends WebSecurityConfigurerAdapter  {
 	@Override
 	protected void configure(HttpSecurity http) throws Exception {
 		
-		http.cors().and().csrf().disable();
+		http
+		.csrf().disable()
+		.cors(cors -> {
+			cors.configurationSource(corsConfigurationSource());
+		})
 		.oauth2ResourceServer(oauth2 -> oauth2
 			.authenticationManagerResolver(authenticationManagerResolver())
 		)
@@ -139,15 +143,14 @@ public class SecuritySpringConfig extends WebSecurityConfigurerAdapter  {
 
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
-    final CorsConfiguration configuration = new CorsConfiguration();
-
-		configuration.setAllowedOrigins(Collections.unmodifiableList(Arrays.asList("*")));
-		configuration.setAllowedMethods(
-				Collections.unmodifiableList(Arrays.asList("HEAD", "GET", "POST", "DELETE", "PUT", "OPTIONS")));
-		configuration.setAllowedHeaders(Collections.unmodifiableList(Arrays.asList("apikey")));
-
-		final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    CorsConfiguration configuration = new CorsConfiguration();
+		configuration.setAllowedOrigins(List.of("https://wildfiresituation.nrs.gov.bc.ca", "https://wfnews-client.dev.bcwildfireservices.com", "https://wfnews-client.test.bcwildfireservices.com"));
+		configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"));
+		configuration.setAllowedHeaders(List.of("Content-Type", "Apikey", "Authorization"));
+		configuration.setAllowCredentials(true);
+		UrlBasedCorsConfigurationSource source = new
+				UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
-
 		return source;
+  }
 }
